--- a/main-tsoreduction.tex
+++ b/main-tsoreduction.tex
@@ -452,7 +452,7 @@ Thus, had it not been for the first read $R_1$, this procedure would have been t
 Now let us repeat the same consideration for $R_2$.
 Let the TSO-run $\alisequencex r$ be in the form
 \[
-\alisequencex r = q_0\tau_1\cdot\ q\xrightarrow{\textnormal{\sc\small Wr},t:W_l}\cdot\ \tau_2\ \cdot q'\xrightarrow{\textnormal{\sc\small 
+\alisequencex r = q_0\tau_1\cdot\ q\xrightarrow{\textnormal{\sc\small Wr},t:W_l}\cdot\ \tau_2\ \cdot q'\xrightarrow{}
 \]
 
 
